...
    
    static func getLocalizedRates(lang: String = Locale.current.languageCode ?? "ru") -> [CurrencyRate] {
        
        switch lang {
        case "en":
            return [
                CurrencyRate(code: "USD", name: "US Dollar", buy: "3.2450", sell: "3.2850"),
                CurrencyRate(code: "EUR", name: "Euro", buy: "3.5120", sell: "3.5650"),
                CurrencyRate(code: "RUB", name: "100 Russian Rubles", buy: "3.4800", sell: "3.5300"),
                CurrencyRate(code: "CNY", name: "10 Chinese Yuan", buy: "4.4500", sell: "4.5200")
            ]
        case "it":
            return [
...
